--- a/index.html
+++ b/index.html
@@ -61,17 +61,35 @@
         <h2 class="section-one visually-hidden">section-one</h2>
         <ul class="list section-one-list">
           <li class="itom">
+            <div class="glav-iconka">
+              <svg class="antenna" width="64" height="64">
+                <use href="./images/icon.svg/logo01.svg#icon-antenna-1-1">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Strategy</h3>
             <p class="title-description">Our goal is to identify the business
               problem to walk away with the perfect and creative solution.</p>
           </li>
           <li class="itom">
+            <div class="glav-iconka">
+              <svg class="antenna" width="64" height="64">
+                <use href="./images/icon.svg/logo02.svg#icon-clock-1-1">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Punctuality</h3>
             <p class="title-description">Bring the key message to the brand's audience for the best price within the
               shortest possible
               time.</p>
           </li>
           <li class="itom">
+            <div class="glav-iconka">
+              <svg class="antenna" width="64" height="64">
+                <use href="./images/icon.svg/logo03.svg#icon-diagram-1-1">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Diligence</h3>
             <p class="title-description">Research and confirm brands that present the strongest digital growth
               opportunities and minimize
@@ -79,8 +97,15 @@
             </p>
           </li>
           <li class="itom">
+            <div class="glav-iconka">
+              <svg class="antenna" width="64" height="64">
+                <use href="./images/icon.svg/logo04.svg#icon-astronaut-1-1">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Technologies</h3>
-            <p class="title-description">Design practice focused on digital experiences. We bring forth a deep passion
+            <p class="title-description">Design practice focused on digital experiences. We bring forth a deep
+              passion
               for
               problem-solving.
             </p>
@@ -115,6 +140,42 @@
             <div class="class-one">
               <h3 class="staff-name">Mark Guerrero</h3>
               <p class="staff-role">Product Designer</p>
+              <div class="theam-iconka-cont">
+                <ul class="theam-iconka-list list">
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
           <li class="theam">
@@ -122,6 +183,42 @@
             <div class="class-one">
               <h3 class="staff-name">Tom Ford</h3>
               <p class="staff-role">Frontend Developer</p>
+              <div class="theam-iconka-cont">
+                <ul class="theam-iconka-list list">
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
           <li class="theam">
@@ -129,6 +226,42 @@
             <div class="class-one">
               <h3 class="staff-name">Camila Garcia</h3>
               <p class="staff-role">Marketing</p>
+              <div class="theam-iconka-cont">
+                <ul class="theam-iconka-list list">
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
           <li class="theam">
@@ -136,7 +269,95 @@
             <div class="class-one">
               <h3 class="staff-name">Daniel Wilson</h3>
               <p class="staff-role">UI Designer</p>
+              <div class="theam-iconka-cont">
+                <ul class="theam-iconka-list list">
+                  <li class="sicial-mereja-list ">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sicial-mereja-list">
+                    <a href="" class="theam-iconka-link">
+                      <svg class="theam-iconka" width="16px" height="16px">
+                        <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
+    </section>
+    <section class="customer">
+      <div class="container">
+        <h2 class="customers">Customers</h2>
+        <ul class="client-list list">
+          <li class="customer-client">
+            <a href="" class="client-link">
+              <svg class="client-icons" width="104" height="56">
+                <use href="./images/icon.svg/logo1.svg#icon-Logo-1">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="customer-client">
+            <a href="" class="client-link">
+              <svg class="client-icons" width="104" height="56">
+                <use href="./images/icon.svg/logo2.svg#icon-Logo-2-1">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="customer-client">
+            <a href="" class="client-link">
+              <svg class="client-icons" width="104" height="56">
+                <use href="./images/icon.svg/logo3.svg#icon-Logo-3-1">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="customer-client">
+            <a href="" class="client-link">
+              <svg class="client-icons" width="104" height="56">
+                <use href="./images/icon.svg/logo4.svg#icon-Logo-4-1">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="customer-client">
+            <a href="" class="client-link">
+              <svg class="client-icons" width="104" height="56">
+                <use href="./images/icon.svg/logo5.svg#icon-Logo-5-1">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="customer-client">
+            <a href="" class="client-link">
+              <svg class="client-icons" width="104" height="56">
+                <use href="./images/icon.svg/logo6.svg#icon-Logo-6-1">
+                </use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -145,9 +366,44 @@
   <!-- footer -->
   <footer class="footer link">
     <div class="container foot-nav">
-      <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.</p>
+      <div class="footer-one">
+        <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+          growth solutions.</p>
+      </div>
+      <div class="social-nav">
+        <p class="social-media">Social media</p>
+        <ul class="social-media-footer-list list">
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon.svg#icon-instagram-2-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 
