--- a/portfolio.html
+++ b/portfolio.html
@@ -156,10 +156,46 @@
   </main>
   <footer class="footer link">
     <div class="container foot-nav">
-      <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="footer-one">
+        <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+          growth
+          solutions.
+        </p>
+      </div>
+      <div class="social-nav">
+        <p class="social-media">Social media</p>
+        <ul class="social-media-footer-list list">
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon.svg#icon-instagram-2-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-sm">
+              <svg class="iconka-sm" width="24px" height="24px">
+                <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
