--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <ul class="theam-iconka-list list">
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
                         </use>
                       </svg>
@@ -152,7 +152,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
                         </use>
                       </svg>
@@ -160,7 +160,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
                         </use>
                       </svg>
@@ -168,7 +168,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
                         </use>
                       </svg>
@@ -187,7 +187,7 @@
                 <ul class="theam-iconka-list list">
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
                         </use>
                       </svg>
@@ -195,7 +195,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
                         </use>
                       </svg>
@@ -203,7 +203,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
                         </use>
                       </svg>
@@ -211,7 +211,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
                         </use>
                       </svg>
@@ -230,7 +230,7 @@
                 <ul class="theam-iconka-list list">
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
                         </use>
                       </svg>
@@ -238,7 +238,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
                         </use>
                       </svg>
@@ -246,7 +246,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
                         </use>
                       </svg>
@@ -254,7 +254,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
                         </use>
                       </svg>
@@ -273,7 +273,7 @@
                 <ul class="theam-iconka-list list">
                   <li class="sicial-mereja-list ">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon.svg#icon-instagram-2-1">
                         </use>
                       </svg>
@@ -281,7 +281,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1">
                         </use>
                       </svg>
@@ -289,7 +289,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1">
                         </use>
                       </svg>
@@ -297,7 +297,7 @@
                   </li>
                   <li class="sicial-mereja-list">
                     <a href="" class="theam-iconka-link">
-                      <svg class="theam-iconka" width="16px" height="16px">
+                      <svg class="theam-iconka" width="16" height="16">
                         <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1">
                         </use>
                       </svg>
@@ -377,28 +377,28 @@
         <ul class="social-media-footer-list list">
           <li>
             <a href="" class="link-sm">
-              <svg class="iconka-sm" width="24px" height="24px">
+              <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon.svg#icon-instagram-2-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sm">
-              <svg class="iconka-sm" width="24px" height="24px">
+              <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sm">
-              <svg class="iconka-sm" width="24px" height="24px">
+              <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sm">
-              <svg class="iconka-sm" width="24px" height="24px">
+              <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1"></use>
               </svg>
             </a>
