--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
                       </svg>
                     </a>
                   </li>
-                  <ul>
-                  </ul>
+                </ul>
               </div>
             </div>
           </li>
@@ -307,7 +306,8 @@
                 </ul>
               </div>
             </div>
-          </li>
+      </div>
+      </li>
     </section>
     <section class="customer">
       <div class="container">
