--- a/index.html
+++ b/index.html
@@ -368,28 +368,28 @@
         <p class="social-media">Social media</p>
         <ul class="social-media-footer-list list">
           <li>
-            <a href="" class="link-sm">
+            <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon.svg#icon-instagram-2-1"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="" class="link-sm">
+            <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="" class="link-sm">
+            <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="" class="link-sm">
+            <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
                 <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1"></use>
               </svg>
