--- a/portfolio.html
+++ b/portfolio.html
@@ -165,32 +165,32 @@
       </div>
       <div class="social-nav">
         <p class="social-media">Social media</p>
-        <ul class="social-media-footer-list list">
+        <ul class="social-footer-list list">
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icon.svg/icon.svg#icon-instagram-2-1"></use>
+                <use href="./images/icons.svg/icon.svg#icon-instagram-2-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icon.svg/icon2.svg#icon-twitter-1-1"></use>
+                <use href="./images/icons.svg/icon2.svg#icon-twitter-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icon.svg/icon3.svg#icon-facebook-1-1"></use>
+                <use href="./images/icons.svg/icon3.svg#icon-facebook-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icon.svg/icon4.svg#icon-linkedin-1-1"></use>
+                <use href="./images/icons.svg/icon4.svg#icon-linkedin-1-1"></use>
               </svg>
             </a>
           </li>
