--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
               </ul>
             </div>
           </li>
+        </ul>
+      </div>
     </section>
     <section class="customer">
       <div class="container">
