--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
         </ul>
         <ul class="flex-list list">
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How1/img01.jpg" alt="Banking App Interface Concept" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Banking App Interface Concept</h2>
@@ -79,7 +79,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How1/img02.jpg" alt="Cashless Payment" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Cashless Payment</h2>
@@ -88,7 +88,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How1/img03.jpg" alt="Meditation App" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Meditation App</h2>
@@ -97,7 +97,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How2/img04.jpg" alt="Taxi Service" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Taxi Service</h2>
@@ -106,7 +106,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How2/img05.jpg" alt="Screen Illustrations" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Screen Illustrations</h2>
@@ -115,7 +115,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How2/img06.jpg" alt="Online Courses" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Online Courses</h2>
@@ -124,7 +124,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How3/img07.jpg" alt="Instagram Stories Concept" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Instagram Stories Concept</h2>
@@ -133,7 +133,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How3/img08.jpg" alt="Organic Food" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Organic Food</h2>
@@ -142,7 +142,7 @@
             </a>
           </li>
           <li class="flex-portfolio">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img src="./images/How3/img09.jpg" alt="Fresh Coffee" width="360" height="300" />
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Fresh Coffee</h2>
