--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li class="itom">
             <div class="glav-iconka">
               <svg class="antenna" width="64" height="64">
-                <use href="./images/icons.svg/logo01.svg#icon-antenna-1-1">
+                <use href="./images/icons.svg#icon-antenna-1-1">
                 </use>
               </svg>
             </div>
@@ -74,7 +74,7 @@
           <li class="itom">
             <div class="glav-iconka">
               <svg class="antenna" width="64" height="64">
-                <use href="./images/icons.svg/logo02.svg#icon-clock-1-1">
+                <use href="./images/icons.svg#icon-clock-1-1">
                 </use>
               </svg>
             </div>
@@ -86,7 +86,7 @@
           <li class="itom">
             <div class="glav-iconka">
               <svg class="antenna" width="64" height="64">
-                <use href="./images/icons.svg/logo03.svg#icon-diagram-1-1">
+                <use href="./images/icons.svg#icon-diagram-1-1">
                 </use>
               </svg>
             </div>
@@ -99,7 +99,7 @@
           <li class="itom">
             <div class="glav-iconka">
               <svg class="antenna" width="64" height="64">
-                <use href="./images/icons.svg/logo04.svg#icon-astronaut-1-1">
+                <use href="./images/icons.svg#icon-astronaut-1-1">
                 </use>
               </svg>
             </div>
@@ -144,7 +144,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon.svg#icon-instagram-2-1">
+                      <use href="./images/icons.svg#icon-instagram-2-1">
                       </use>
                     </svg>
                   </a>
@@ -152,7 +152,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon2.svg#icon-twitter-1-1">
+                      <use href="./images/icons.svg#icon-twitter-1-1">
                       </use>
                     </svg>
                   </a>
@@ -160,7 +160,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon3.svg#icon-facebook-1-1">
+                      <use href="./images/icons.svg#icon-facebook-1-1">
                       </use>
                     </svg>
                   </a>
@@ -168,7 +168,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon4.svg#icon-linkedin-1-1">
+                      <use href="./images/icons.svg#icon-linkedin-1-1">
                       </use>
                     </svg>
                   </a>
@@ -185,7 +185,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon.svg#icon-instagram-2-1">
+                      <use href="./images/icons.svg#icon-instagram-2-1">
                       </use>
                     </svg>
                   </a>
@@ -193,7 +193,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon2.svg#icon-twitter-1-1">
+                      <use href="./images/icons.svg#icon-twitter-1-1">
                       </use>
                     </svg>
                   </a>
@@ -201,7 +201,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon3.svg#icon-facebook-1-1">
+                      <use href="./images/icons.svg#icon-facebook-1-1">
                       </use>
                     </svg>
                   </a>
@@ -209,7 +209,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon4.svg#icon-linkedin-1-1">
+                      <use href="./images/icons.svg#icon-linkedin-1-1">
                       </use>
                     </svg>
                   </a>
@@ -226,7 +226,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon.svg#icon-instagram-2-1">
+                      <use href="./images/icons.svg#icon-instagram-2-1">
                       </use>
                     </svg>
                   </a>
@@ -234,7 +234,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon2.svg#icon-twitter-1-1">
+                      <use href="./images/icons.svg#icon-twitter-1-1">
                       </use>
                     </svg>
                   </a>
@@ -242,7 +242,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon3.svg#icon-facebook-1-1">
+                      <use href="./images/icons.svg#icon-facebook-1-1">
                       </use>
                     </svg>
                   </a>
@@ -250,7 +250,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon4.svg#icon-linkedin-1-1">
+                      <use href="./images/icons.svg#icon-linkedin-1-1">
                       </use>
                     </svg>
                   </a>
@@ -267,7 +267,7 @@
                 <li class="sicial-mereja-list ">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon.svg#icon-instagram-2-1">
+                      <use href="./images/icons.svg#icon-instagram-2-1">
                       </use>
                     </svg>
                   </a>
@@ -275,7 +275,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon2.svg#icon-twitter-1-1">
+                      <use href="./images/icons.svg#icon-twitter-1-1">
                       </use>
                     </svg>
                   </a>
@@ -283,7 +283,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon3.svg#icon-facebook-1-1">
+                      <use href="./images/icons.svg#icon-facebook-1-1">
                       </use>
                     </svg>
                   </a>
@@ -291,7 +291,7 @@
                 <li class="sicial-mereja-list">
                   <a href="" class="theam-iconka-link">
                     <svg class="theam-iconka" width="16" height="16">
-                      <use href="./images/icons.svg/icon4.svg#icon-linkedin-1-1">
+                      <use href="./images/icons.svg#icon-linkedin-1-1">
                       </use>
                     </svg>
                   </a>
@@ -309,7 +309,7 @@
           <li class="customer-client">
             <a href="" class="client-link">
               <svg class="client-icons" width="104" height="56">
-                <use href="./images/icons.svg/logo1.svg#icon-Logo-1">
+                <use href="./images/icons.svg#icon-Logo-1">
                 </use>
               </svg>
             </a>
@@ -317,7 +317,7 @@
           <li class="customer-client">
             <a href="" class="client-link">
               <svg class="client-icons" width="104" height="56">
-                <use href="./images/icons.svg/logo2.svg#icon-Logo-2-1">
+                <use href="./images/icons.svg#icon-Logo-2-1">
                 </use>
               </svg>
             </a>
@@ -325,7 +325,7 @@
           <li class="customer-client">
             <a href="" class="client-link">
               <svg class="client-icons" width="104" height="56">
-                <use href="./images/icons.svg/logo3.svg#icon-Logo-3-1">
+                <use href="./images/icons.svg#icon-Logo-3-1">
                 </use>
               </svg>
             </a>
@@ -333,7 +333,7 @@
           <li class="customer-client">
             <a href="" class="client-link">
               <svg class="client-icons" width="104" height="56">
-                <use href="./images/icons.svg/logo4.svg#icon-Logo-4-1">
+                <use href="./images/icons.svg#icon-Logo-4-1">
                 </use>
               </svg>
             </a>
@@ -341,7 +341,7 @@
           <li class="customer-client">
             <a href="" class="client-link">
               <svg class="client-icons" width="104" height="56">
-                <use href="./images/icons.svg/logo5.svg#icon-Logo-5-1">
+                <use href="./images/icons.svg#icon-Logo-5-1">
                 </use>
               </svg>
             </a>
@@ -349,7 +349,7 @@
           <li class="customer-client">
             <a href="" class="client-link">
               <svg class="client-icons" width="104" height="56">
-                <use href="./images/icons.svg/logo6.svg#icon-Logo-6-1">
+                <use href="./images/icons.svg#icon-Logo-6-1">
                 </use>
               </svg>
             </a>
@@ -369,31 +369,31 @@
       <div class="social-nav">
         <p class="social-media">Social media</p>
         <ul class="social-footer-list list">
-          <li>
+          <li class="glavni-iconki">
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
-                <use href="./images/icons.svg/icon.svg#icon-instagram-2-1"></use>
+                <use href="./images/icons.svg#icon-instagram-2-1"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="glavni-iconki">
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
-                <use href="./images/icons.svg/icon2.svg#icon-twitter-1-1"></use>
+                <use href="./images/icons.svg#icon-twitter-1-1"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="glavni-iconki">
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
-                <use href="./images/icons.svg/icon3.svg#icon-facebook-1-1"></use>
+                <use href="./images/icons.svg#icon-facebook-1-1"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="glavni-iconki">
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24" height="24">
-                <use href="./images/icons.svg/icon4.svg#icon-linkedin-1-1"></use>
+                <use href="./images/icons.svg#icon-linkedin-1-1"></use>
               </svg>
             </a>
           </li>
