--- a/portfolio.html
+++ b/portfolio.html
@@ -169,28 +169,28 @@
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icons.svg/icon.svg#icon-instagram-2-1"></use>
+                <use href="./images/icons.svg#icon-instagram-2-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icons.svg/icon2.svg#icon-twitter-1-1"></use>
+                <use href="./images/icons.svg#icon-twitter-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icons.svg/icon3.svg#icon-facebook-1-1"></use>
+                <use href="./images/icons.svg#icon-facebook-1-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="link-sosial-media">
               <svg class="iconka-sm" width="24px" height="24px">
-                <use href="./images/icons.svg/icon4.svg#icon-linkedin-1-1"></use>
+                <use href="./images/icons.svg#icon-linkedin-1-1"></use>
               </svg>
             </a>
           </li>
