--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
         <ul class="site-nav list">
           <li class="item">
-            <a class="nav-link link" href="./index.html">Studio</a>
+            <a class="nav-link current link" href="./index.html">Studio</a>
           </li>
           <li class="item">
-            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+            <a class="nav-link baterr link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="item">
             <a class="nav-link link" href="">Contacts</a>
@@ -401,7 +401,16 @@
       </div>
     </div>
   </footer>
-
+  <!-- modal window -->
+  <div class="backdrop">
+    <div class="modal">
+      <button class="modal-btn" type="button">
+        <svg class="modal-icon" width="" height="">
+          <use href=""></use>
+        </svg>
+      </button>
+    </div>
+  </div>
 </body>
 
 </html>
