--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <a class="nav-link link" href="./index.html">Studio</a>
           </li>
           <li class="item">
-            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+            <a class="nav-link current link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="item">
             <a class="nav-link link" href="">Contacts</a>
@@ -71,7 +71,12 @@
         <ul class="flex-list list">
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How1/img01.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How1/img01.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App </p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Banking App Interface Concept</h2>
                 <p class="portfolio-platform">App</p>
@@ -80,7 +85,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How1/img02.jpg" alt="Cashless Payment" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How1/img02.jpg" alt="Cashless Payment" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Cashless Payment</h2>
                 <p class="portfolio-platform">Marketing</p>
@@ -89,7 +99,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How1/img03.jpg" alt="Meditation App" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How1/img03.jpg" alt="Meditation App" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Meditation App</h2>
                 <p class="portfolio-platform">App</p>
@@ -98,7 +113,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How2/img04.jpg" alt="Taxi Service" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How2/img04.jpg" alt="Taxi Service" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Taxi Service</h2>
                 <p class="portfolio-platform">Marketing</p>
@@ -107,7 +127,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How2/img05.jpg" alt="Screen Illustrations" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How2/img05.jpg" alt="Screen Illustrations" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Screen Illustrations</h2>
                 <p class="portfolio-platform">Design</p>
@@ -116,7 +141,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How2/img06.jpg" alt="Online Courses" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How2/img06.jpg" alt="Online Courses" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Online Courses</h2>
                 <p class="portfolio-platform">Marketing</p>
@@ -125,7 +155,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How3/img07.jpg" alt="Instagram Stories Concept" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How3/img07.jpg" alt="Instagram Stories Concept" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Instagram Stories Concept</h2>
                 <p class="portfolio-platform">Design</p>
@@ -134,7 +169,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How3/img08.jpg" alt="Organic Food" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How3/img08.jpg" alt="Organic Food" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Organic Food</h2>
                 <p class="portfolio-platform">Web Site</p>
@@ -143,7 +183,12 @@
           </li>
           <li class="flex-portfolio">
             <a class="portfolio-link link" href="">
-              <img src="./images/How3/img09.jpg" alt="Fresh Coffee" width="360" height="300" />
+              <div class="portfolio-block">
+                <img src="./images/How3/img09.jpg" alt="Fresh Coffee" width="360" height="300" />
+                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Fresh Coffee</h2>
                 <p class="portfolio-platform">Web Site</p>
